# WITE

./: .gitignore  AUTHORS  CMakeLists.txt  CONTACTME  COPYRIGHT  README.md  SpatialProgression_vs.sln  build.bat  build.sh  test_skips.txt
DllBuildTestTempProj/: DllBuildTestTempProj.cpp  DllBuildTestTempProj.vcxproj  DllBuildTestTempProj.vcxproj.filters  stdafx.cpp
PoCs/: LiteralListProxy  LiteralListProxy.cpp  LiteralStruct  LiteralStruct.cpp  PolyDestructor  PolyDestructor.cpp  SpaceCompute  SpaceCompute.cpp  SpacePlane  SpacePlane.cpp  SpacePlane.txt  StructuralConstList.cpp  array_padding  array_padding.cpp  constevalLambda  constevalLambda.cpp  disambiguate_container  disambiguate_container.cpp  jaggedList  jaggedList.cpp  mmap  mmap.cpp  sound  sound.cpp  standaloneCube  standaloneCube.cpp  time.cpp  undefined-internal-def.cpp  undefined-internal-main.cpp  undefined-internal.hpp
SpatialProgression_vs/: SpatialProgression_vs.vcxproj  main.cpp
TestCube/: Main.cpp  Shaders.h  TestCube.vcxproj  TestCube.vcxproj.filters  compileShaders.bat  cube_data.h  main.cpp  makeApiDump.bat
TestCube/shaders/: flat.frag  flat.vert
Tests/: CallbackFactory.cpp  ComputeProjection.cpp  ComputeSphere.cpp  CubeMap.cpp  Database.cpp  GeometryIcoSphere.cpp  HelloWorld.cpp  IndirectIndexedText.comp.glsl  IndirectIndexedText.cpp  IndirectText.comp.glsl  IndirectText.cpp  IndirectText.vert.glsl  InputTest.cpp  LinkedTree.cpp  MeshLeaf.cpp  MeshLoadedOverhead.cpp  SimpleRender.cpp  SpaceCompute.cpp  SpaceCompute.txt  SpaceFragment.cpp  SpaceFragmentBloom.cpp  SpaceMelons.cpp  SpaceSpheres.cpp  VertBufferFreeCube.cpp  basicShader.frag.glsl  basicShader.glsl  basicShader.vert.glsl  basicShaderWithCamBuffer.vert.glsl  box_normal.vert.glsl  computeFlare.comp.glsl  computeFlarePart2.comp.glsl  computeSpace.comp.glsl  computeSphere.comp.glsl  database.cpp  dbIndex.cpp  empty.mesh.glsl  fragmentBloom.frag.glsl  fragmentSpace.frag.glsl  fragmentSphere.frag.glsl  icosahedron.vert.glsl  (+11 more)
WITE/: AdvancedSyncLock.cpp  AdvancedSyncLock.hpp  ArbitrarySizeQueue.cpp  ArbitrarySizeQueue.hpp  AtomicLinkedList.hpp  AtomicRollingQueue.hpp  BackedRenderTarget.hpp  BackedrenderTarget.hpp.old  BalancingThreadResourcePool.hpp  BitmaskIterator.hpp  Buffer.cpp  Buffer.hpp  Callback.hpp  Concepts.hpp  Configuration.hpp  ConstevalArray.hpp  ConstexprString.hpp  CopyableArray.hpp  CubeMap.hpp  DBDelta.cpp  DBDelta.hpp  DBEntity.cpp  DBEntity.hpp  DBPendingTransaction.hpp  DBRecord.hpp  DBRecordFlag.hpp  DBThread.cpp  DBThread.hpp  DEBUG.cpp  DEBUG.hpp  Database.cpp  Database.hpp  DescriptorSetLayoutBindingContainer.hpp  DynamicRollingQueue.hpp  ElasticCommandBuffer.cpp  ElasticCommandBuffer.hpp  ExportLayerLayout.hpp  ExportOnion.hpp  ExportResource.hpp  ExportShader.hpp  (+169 more)
WITE/docs/diagrams/: onion.drawio  vulkan.drawio
WaffleIronTransactionalEngine/: AtomicBitmask_export.h  AtomicLinkedList.h  BackedBuffer.cpp  BackedBuffer.h  BackedBuffer_export.h  BackedImage.cpp  BackedImage.h  BackedImage_export.h  CMakeLists.txt  CallbackFactory_export.h  Camera.cpp  Camera.h  Camera_export.h  Config.cpp  Config.h  DFOSLG_definitions_export.cpp  DFOSLG_export.h  DataLock.cpp  DataLock.h  Database.cpp  Database.h  Database_export.h  Debugger.cpp  Debugger.h  Export.h  GPU.cpp  GPU.h  GPU_export.h  Globals.cpp  Globals.h  Globals_export.h  ImageSource_export.h  ImportObj.cpp  Internal.h  LoadBalancer.cpp  LoadBalancer.h  Mesh.cpp  Mesh.h  MeshSource_export.h  Mesh_export.h  (+57 more)
aux/: font_update.cpp  font_update.sh
shared/: onionDescriptorValidator.hpp
shared/font/: font.blend  font.blend1
